--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
-<html lang="en"  ng-app="ionicApp">
+<html ng-app="ionicApp">
 <head>
-    <meta charset="UTF-8">
-    <title>iNeedU</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+
+    <title>iNeedY</title>
     <link href="https://cdn.bootcss.com/ionic/1.3.2/css/ionic.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/ionic/1.3.2/js/ionic.bundle.min.js"></script>
-    <script src="res/css/weixin.css"></script>
     <script type="text/javascript">
-        var app=  angular.module('ionicApp', ['ionic']);
+      var app=  angular.module('ionicApp', ['ionic']);
 
     </script>
+
+    <script src="js/UrlRouter.js"></script>
+    <script src="js/controller/iNeedUCtrl.js"></script>
+    <script src="js/controller/TitleController.js"></script>
+    <script src="js/controller/FindTabCtrl.js"></script>
+
 </head>
+
 <body>
-    <ion-nav-view>  </ion-nav-view>
+
+
+<ion-nav-view></ion-nav-view>
+
 </body>
 </html>
